fix: generateToken and extractAuthorities in JwtService modified to work with authorities